[package]
name = "adsb_parser"
version = "0.1.0"
edition = "2021"
authors = ["Fred Clausen"]
description = "Library for decoding and encoding ACARS and VDLM2 messages"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
log = "0.4.17"

[dev-dependencies]
rand = "0.8.5"
glob = "0.3.0"
chrono = "0.4.22"
humantime = "2.1.0"
prettytable-rs = "0.10.0"
rayon = "1.5.3"
thousands = "0.2.0"
byte-unit = "4.0.14"

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
